# graph_delay

./: .clang-format  .gitignore  CMakeLists.txt  JuceDelayV2.jucer  delay_v2.filtergraph
Source/: ColourMap.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RotaryControl.cpp  RotaryControl.h  XYPad.cpp  XYPad.h
Source/look_and_feel/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  Theme.h
Source/utility/: GlobalConstants.h
Source/widgets/: CustomLabel.cpp  RotaryControl.cpp  RotaryControl.h
Source/widgets/xy_grid/: XyGrid.cpp  XyGrid.h  XyGridCanvas.h
cmake/: get_cpm.cmake  get_juce.cmake
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/gui/interval_control/: IntervalButton.cpp  IntervalButton.h  IntervalButtons.cpp  IntervalButtons.h  IntervalComboBox.cpp  IntervalComboBox.h
source/gui/look_and_feel/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  Theme.h
source/gui/rotary_control/: RotaryControl.cpp  RotaryControl.h  RotaryGroup.cpp  RotaryGroup.h  RotaryPositionMarker.cpp  RotaryPositionMarker.h  RotaryShadow.cpp  RotaryShadow.h
source/gui/widgets/: CustomToggleButton.cpp  CustomToggleButton.h  RotaryControl.cpp  RotaryControl.h  RotaryWithLabel.cpp  RotaryWithLabel.h
source/gui/widgets/interval_selector/: AnnotatedIntervalControl.cpp  AnnotatedIntervalControl.h  IntervalAnnotations.cpp  IntervalAnnotations.h  IntervalControl.cpp  IntervalControl.h
source/gui/xy_graph/: XyGraph.cpp  XyGraph.h  XyGraphCanvas.cpp  XyGraphCanvas.h  XyGraphOverlay.cpp  XyGraphOverlay.h  XyGraphThumb.cpp  XyGraphThumb.h
source/utility/: GlobalConstants.h
source/widgets/: CustomLabel.h
source/widgets/xy_grid/: XyGridCanvas.cpp  XyGridOverlay.cpp  XyGridOverlay.h  XyGridThumb.cpp  XyGridThumb.h
